[package]
name = "booking_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = "0.5.1"
mysql = "*"
chrono = { version="0.4.34", features = ["serde"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"